<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestMiLinkSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="Test">Test</string>

	<string name="Open">Open</string>
    <string name="Close">Close</string>
	<string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>

    <string name="DisplayFirstPhoto">显示第一张图片</string>
	<string name="DisplayPhoto1">显示图片1</string>
    <string name="CachePhoto2">缓存图片2</string>
    <string name="DisplayPhoto2">显示图片2</string>
    <string name="CachePhoto3">缓存图片3</string>
    <string name="DisplayPhoto3">显示图片3</string>
    <string name="StartSlideshow">开始幻灯片</string>
    <string name="StopSlideshow">停止幻灯片</string>
    <string name="StopDisplay">停止显示</string>

	<string name="PlayVideo">PlayVideo</string>
	<string name="PlayAudio">PlayAudio</string>
	<string name="PlayPause">Play/Pause</string>
	<string name="StopPlay">StopPlay</string>

	<string name="GetPosition">GetPos</string>
	<string name="GetDuration">GetDuration</string>
	<string name="GetVolume">GetVolume</string>
	<string name="VolInc">Vol+</string>
	<string name="VolDec">Vol-</string>
	<string name="Seek">Seek</string>
	<string name="Subscribe">Subscribe</string>

	<string name="Info">information</string>
	
	<string name="startshow">startshow</string>
	<string name="stopshow">stopshow</string>
	<string name="startslide">startslide</string>
	<string name="stopsslide">stopslide</string>
	<string name="p0">0</string>
	<string name="p1">1</string>
	<string name="p2">2</string>
	<string name="p3">3</string>
	<string name="p4">4</string>
	<string name="p5">5</string>
	<string name="p6">6</string>
	<string name="p7">7</string>
	<string name="p8">8</string>
	<string name="p9">9</string>
	<string name="p10">10</string>
	<string name="p11">11</string>
	<string name="p12">12</string>
	<string name="p13">13</string>
	<string name="p14">14</string>
	<string name="p15">15</string>
	<string name="p16">16</string>
	<string name="p17">17</string>
	<string name="p18">18</string>
	<string name="p19">19</string>
	<string name="p20">20</string>
	<string name="p21">21</string>
	<string name="p22">22</string>
	<string name="p23">23</string>
	
</resources>